external-crates/move/crates/move-compiler/tests/move_2024/unit_test/cross_module_test_only_module.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_2024/unit_test/cross_module_test_only_module.move:9:9
  │
9 │     use 0x1::M;
  │         ^^^^^^ Invalid 'use'. Unbound module: '0x1::M'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/unit_test/cross_module_test_only_module.move:12:9
   │
12 │         M::foo()
   │         ^^^^^^ Unexpected module identifier. A module identifier is not a valid expression
